--- a/app/Resources/views/bien/edit.html.twig
+++ b/app/Resources/views/bien/edit.html.twig
@@ -106,6 +106,7 @@
                                 </div>
                             </div>
                             <div class="form-group text-right">
+                                <a href="{{ path('backend_bien_index') }}" class="btn btn-default">Annuler</a>
                                 <button class="btn btn-primary">Modifier</button>
                             </div>
                             {{ form_end(edit_form) }}
