--- a/app/Resources/views/bien/index.html.twig
+++ b/app/Resources/views/bien/index.html.twig
@@ -78,11 +78,11 @@
                                 </div>
                                 <br>
                                 <div class="row">
-                                    <!--<div class="col-md-12">
+                                    <div class="col-md-12">
                                         <small class="text-muted">
-                                            {{ bien.description|slice(0,150)|raw }}...
+                                            {{ bien.description|striptags|slice(0,150)|raw }}...
                                         </small>
-                                    </div>-->
+                                    </div>
                                 </div>
                             </div>
                         </div>
