--- a/app/Resources/views/bien/show.html.twig
+++ b/app/Resources/views/bien/show.html.twig
@@ -68,11 +68,11 @@
                                         <a href="{{ path('frontend_bien_show', {'categorie': bien.categorie.slug, 'slug': bien.slug}) }}" class="" target="_blank">
                                             <i class="fa fa-street-view fa-2x"></i>
                                         </a>
-                                    {% elseif bien.visiteDossier %}
-                                        <a href="{{ asset('visiteguidee/'~bien.visiteDossier~'/index.html') }}" class="">
-                                            <i class="fa fa-cube fa-2x"></i>
+                                    {% endif %} &nbsp; &nbsp;
+                                    {% if bien.visiteDossier %}
+                                        <a href="{{ asset('visiteguidee/'~bien.visiteDossier~'/index.html') }}" class="fancybox fancybox.iframe" title="Visite guidée">
+                                            <i class="fa fa-cube fa-lg"></i>
                                         </a>
-                                    {% else %}
                                     {% endif %}
                                 </div>
                             </div>
@@ -151,4 +151,193 @@
 {% block javascripts %}
     {{ parent() }}
     <script src='{{ absolute_url(asset('ressources/assets/bundles/ba78fede76f682cd388ed2abbfd1e1568e76f8a4.js')) }}'></script>
+    <script type="text/javascript" src="{{ asset('visiteguidee/lib/jquery.mousewheel.pack.js') }}"></script>
+
+    <script type="text/javascript" src="{{ asset('visiteguidee/source/jquery.fancybox.pack.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ asset('visiteguidee/source/jquery.fancybox.css')}}" media="screen" />
+
+    <link rel="stylesheet" type="text/css" href="{{ asset('visiteguidee/source/helpers/jquery.fancybox-buttons.css')}}" />
+    <script type="text/javascript" src="{{ asset('visiteguidee/source/helpers/jquery.fancybox-buttons.js')}}"></script>
+
+    <link rel="stylesheet" type="text/css" href="{{ asset('visiteguidee/source/helpers/jquery.fancybox-thumbs.css')}}" />
+    <script type="text/javascript" src="{{ asset('visiteguidee/source/helpers/jquery.fancybox-thumbs.js')}}"></script>
+
+    <script type="text/javascript" src="{{ asset('visiteguidee/source/helpers/jquery.fancybox-media.js')}}"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            /*
+			 *  Simple image gallery. Uses default settings
+			 */
+
+            $('.fancybox').fancybox();
+
+            /*
+			 *  Different effects
+			 */
+
+            // Change title type, overlay closing speed
+            $(".fancybox-effects-a").fancybox({
+                helpers: {
+                    title : {
+                        type : 'outside'
+                    },
+                    overlay : {
+                        speedOut : 0
+                    }
+                }
+            });
+
+            // Disable opening and closing animations, change title type
+            $(".fancybox-effects-b").fancybox({
+                openEffect  : 'none',
+                closeEffect	: 'none',
+
+                helpers : {
+                    title : {
+                        type : 'over'
+                    }
+                }
+            });
+
+            // Set custom style, close if clicked, change title type and overlay color
+            $(".fancybox-effects-c").fancybox({
+                wrapCSS    : 'fancybox-custom',
+                closeClick : true,
+
+                openEffect : 'none',
+
+                helpers : {
+                    title : {
+                        type : 'inside'
+                    },
+                    overlay : {
+                        css : {
+                            'background' : 'rgba(238,238,238,0.85)'
+                        }
+                    }
+                }
+            });
+
+            // Remove padding, set opening and closing animations, close if clicked and disable overlay
+            $(".fancybox-effects-d").fancybox({
+                padding: 0,
+
+                openEffect : 'elastic',
+                openSpeed  : 150,
+
+                closeEffect : 'elastic',
+                closeSpeed  : 150,
+
+                closeClick : true,
+
+                helpers : {
+                    overlay : null
+                }
+            });
+
+            /*
+			 *  Button helper. Disable animations, hide close button, change title type and content
+			 */
+
+            $('.fancybox-buttons').fancybox({
+                openEffect  : 'none',
+                closeEffect : 'none',
+
+                prevEffect : 'none',
+                nextEffect : 'none',
+
+                closeBtn  : false,
+
+                helpers : {
+                    title : {
+                        type : 'inside'
+                    },
+                    buttons	: {}
+                },
+
+                afterLoad : function() {
+                    this.title = 'Image ' + (this.index + 1) + ' of ' + this.group.length + (this.title ? ' - ' + this.title : '');
+                }
+            });
+
+
+            /*
+			 *  Thumbnail helper. Disable animations, hide close button, arrows and slide to next gallery item if clicked
+			 */
+
+            $('.fancybox-thumbs').fancybox({
+                prevEffect : 'none',
+                nextEffect : 'none',
+
+                closeBtn  : false,
+                arrows    : false,
+                nextClick : true,
+
+                helpers : {
+                    thumbs : {
+                        width  : 50,
+                        height : 50
+                    }
+                }
+            });
+
+            /*
+			 *  Media helper. Group items, disable animations, hide arrows, enable media and button helpers.
+			*/
+            $('.fancybox-media')
+                    .attr('rel', 'media-gallery')
+                    .fancybox({
+                        openEffect : 'none',
+                        closeEffect : 'none',
+                        prevEffect : 'none',
+                        nextEffect : 'none',
+
+                        arrows : false,
+                        helpers : {
+                            media : {},
+                            buttons : {}
+                        }
+                    });
+
+            /*
+			 *  Open manually
+			 */
+
+            $("#fancybox-manual-a").click(function() {
+                $.fancybox.open('1_b.jpg');
+            });
+
+            $("#fancybox-manual-b").click(function() {
+                $.fancybox.open({
+                    href : 'iframe.html',
+                    type : 'iframe',
+                    padding : 5
+                });
+            });
+
+            $("#fancybox-manual-c").click(function() {
+                $.fancybox.open([
+                    {
+                        href : '1_b.jpg',
+                        title : 'My title'
+                    }, {
+                        href : '2_b.jpg',
+                        title : '2nd title'
+                    }, {
+                        href : '3_b.jpg'
+                    }
+                ], {
+                    helpers : {
+                        thumbs : {
+                            width: 75,
+                            height: 50
+                        }
+                    }
+                });
+            });
+
+
+        });
+    </script>
 {% endblock %}
