--- a/app/Resources/views/bien/show.html.twig
+++ b/app/Resources/views/bien/show.html.twig
@@ -143,6 +143,10 @@
 
                         </div>
                     {% endif %}
+                    <div class="text-right">
+                        <a href="#" class="btn btn-secondary">Voir les articles</a>
+                        <a href="#" class="btn btn-primary">Ajouter des articles</a>
+                    </div>
                 </div>
             </div>
         </div>
