--- a/app/Resources/views/frontend/details.html.twig
+++ b/app/Resources/views/frontend/details.html.twig
@@ -95,7 +95,176 @@
 			</div>
 		</div>
 	</section>
+	<section class="new_arrivals padbot50">
 
+		<!-- CONTAINER -->
+		<div class="container">
+			<h2>Recent Products</h2>
+
+			<!-- JCAROUSEL -->
+			<div class="jcarousel-wrapper">
+
+				<!-- NAVIGATION -->
+				<div class="jCarousel_pagination">
+					<a href="javascript:void(0);" class="jcarousel-control-prev" ><i class="fa fa-angle-left"></i></a>
+					<a href="javascript:void(0);" class="jcarousel-control-next" ><i class="fa fa-angle-right"></i></a>
+				</div><!-- //NAVIGATION -->
+
+				<div id="jcarousel_id" class="jcarousel">
+					<ul>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/1.jpg" alt="" />
+									<div class="open-project-link"><a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a></div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >Moonglow paisley silk tee</a>
+									<span class="tovar_price">$98.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/2.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >PEASANT TOP IN SUCKERED STRIPE</a>
+									<span class="tovar_price">$78.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/3.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >EMBROIDERED BIB PEASANT TOP</a>
+									<span class="tovar_price">$88.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/4.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >SILK POCKET BLOUSE</a>
+									<span class="tovar_price">$98.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/5.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >SWISS-DOT TUXEDO SHIRT</a>
+									<span class="tovar_price">$65.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/6.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >STRETCH PERFECT SHIRT</a>
+									<span class="tovar_price">$72.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/1.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >Moonglow paisley silk tee</a>
+									<span class="tovar_price">$98.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/2.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >PEASANT TOP IN SUCKERED STRIPE</a>
+									<span class="tovar_price">$78.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/3.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >EMBROIDERED BIB PEASANT TOP</a>
+									<span class="tovar_price">$88.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+						<li>
+							<!-- TOVAR -->
+							<div class="tovar_item_new">
+								<div class="tovar_img">
+									<img src="images/tovar/women/new/4.jpg" alt="" />
+									<div class="open-project-link">
+										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+									</div>
+								</div>
+								<div class="tovar_description clearfix">
+									<a class="tovar_title" href="product-page.html" >SILK POCKET BLOUSE</a>
+									<span class="tovar_price">$98.00</span>
+								</div>
+							</div><!-- //TOVAR -->
+						</li>
+					</ul>
+				</div>
+			</div><!-- //JCAROUSEL -->
+		</div><!-- //CONTAINER -->
+	</section>
 {% endblock %}
 {% block javascripts %}
 	{{ parent() }}
