Backend gestion des produits

--- a/app/Resources/views/bien/show.html.twig
+++ b/app/Resources/views/bien/show.html.twig
@@ -145,7 +145,7 @@
                     {% endif %}
                     <div class="text-right">
                         <a href="#" class="btn btn-secondary">Voir les articles</a>
-                        <a href="#" class="btn btn-primary">Ajouter des articles</a>
+                        <a href="{{ path('backend_produit_new',{'bien':bien.id}) }}" class="btn btn-primary">Ajouter des articles</a>
                     </div>
                 </div>
             </div>
