--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -131,7 +131,7 @@
 					<ul class="sub-menu">
 
 						<li class="menu-item ">
-							<a href='{{ absolute_url(path('homepage'))}}' class=' menu-link'>
+							<a href='{{ absolute_url(path('backend_produit_index'))}}' class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Articles</span>
                             </span>
