--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,12 +9,14 @@
 
     <link rel="shortcut icon" href="{{ absolute_url(asset('favicon.ico')) }}">
 
-    <link href="{{ absolute_url(asset('css/bootstrap.min.css')) }}" rel="stylesheet" type="text/css" />
-    <link href="{{ absolute_url(asset('css/flexslider.css')) }}" rel="stylesheet" type="text/css" />
-    <link href="{{ absolute_url(asset('css/fancySelect.css')) }}" rel="stylesheet" media="screen, projection" />
-    <link href="{{ absolute_url(asset('css/animate.css')) }}" rel="stylesheet" type="text/css" media="all" />
-    <link href="{{ absolute_url(asset('css/style.css')) }}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{{ absolute_url(asset('css/visite.css')) }}">
+    {% block stylesheets %}
+        <link href="{{ absolute_url(asset('css/bootstrap.min.css')) }}" rel="stylesheet" type="text/css" />
+        <link href="{{ absolute_url(asset('css/flexslider.css')) }}" rel="stylesheet" type="text/css" />
+        <link href="{{ absolute_url(asset('css/fancySelect.css')) }}" rel="stylesheet" media="screen, projection" />
+        <link href="{{ absolute_url(asset('css/animate.css')) }}" rel="stylesheet" type="text/css" media="all" />
+        <link href="{{ absolute_url(asset('css/style.css')) }}" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="{{ absolute_url(asset('css/visite.css')) }}">
+    {% endblock %}
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href="{{ absolute_url(asset('css/font-awesome.min.css')) }}" rel="stylesheet">
