--- a/app/Resources/views/frontend/details.html.twig
+++ b/app/Resources/views/frontend/details.html.twig
@@ -95,176 +95,70 @@
 			</div>
 		</div>
 	</section>
-	<section class="new_arrivals padbot50">
+	{% if produits %}
+		<section class="new_arrivals padbot50">
 
-		<!-- CONTAINER -->
-		<div class="container">
-			<h2>Recent Products</h2>
+			<div class="container">
+				<h2>Les articles</h2>
 
-			<!-- JCAROUSEL -->
-			<div class="jcarousel-wrapper">
+				<div class="jcarousel-wrapper">
 
-				<!-- NAVIGATION -->
-				<div class="jCarousel_pagination">
-					<a href="javascript:void(0);" class="jcarousel-control-prev" ><i class="fa fa-angle-left"></i></a>
-					<a href="javascript:void(0);" class="jcarousel-control-next" ><i class="fa fa-angle-right"></i></a>
-				</div><!-- //NAVIGATION -->
+					<div class="jCarousel_pagination">
+						<a href="javascript:void(0);" class="jcarousel-control-prev" ><i class="fa fa-angle-left"></i></a>
+						<a href="javascript:void(0);" class="jcarousel-control-next" ><i class="fa fa-angle-right"></i></a>
+					</div>
 
-				<div id="jcarousel_id" class="jcarousel">
-					<ul>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/1.jpg" alt="" />
-									<div class="open-project-link"><a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a></div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >Moonglow paisley silk tee</a>
-									<span class="tovar_price">$98.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/2.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
+					<div id="jcarousel_id" class="jcarousel">
+						<ul>
+							{% for produit in produits|slice(0,10) %}
+								<li>
+									<!-- TOVAR -->
+									<div class="tovar_item_new">
+										<div class="tovar_img">
+											<img src="{{ absolute_url(asset(vich_uploader_asset(produit, 'imageFile'))) }}" alt="" />
+											<a class="open-project tovar_view" href="javascript:void(0);" data-toggle="modal" data-target="#produit{{ loop.index }}" >Voir</a>
+										</div>
+										<div class="tovar_description clearfix">
+											<a class="tovar_title" href="#" >{{ produit.marque}} {{ produit.reference }}</a>
+											<span class="tovar_price">{{ produit.prix|number_format(0,'','.') }} FCFA</span>
+										</div>
+									</div><!-- //TOVAR -->
+								</li>
+							{% endfor %}
+						</ul>
+						{% for produit in produits|slice(0,10) %}
+							<div class="modal fade" id="produit{{loop.index}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<a href="#" data-dismiss="modal" class="class pull-right"><span class="fa fa-close"></span></a>
+											<h3 class="modal-title">{{produit.marque}}</h3>
+										</div>
+										<div class="modal-body">
+											<div class="row">
+												<div class="col-md-6 product_img">
+													<img src="{{ absolute_url(asset(vich_uploader_asset(produit, 'imageFile'))) }}" class="img-responsive">
+												</div>
+												<div class="col-md-6 product_content">
+													<h4>Reference: <span> {{ produit.reference }}</span></h4>
+													{{ produit.description|raw}}
+													<h3 class="cost"><span class="fa fa-money-bill"></span> {{ produit.prix|number_format(0,'','.')}} FCFA</h3>
+													<div class="space-ten"></div>
+													<div class="btn-ground">
+														<a href="#" class="btn btn-primary"><span class="fa fa-list-alt"></span> Voir le produit</a>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >PEASANT TOP IN SUCKERED STRIPE</a>
-									<span class="tovar_price">$78.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/3.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >EMBROIDERED BIB PEASANT TOP</a>
-									<span class="tovar_price">$88.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/4.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >SILK POCKET BLOUSE</a>
-									<span class="tovar_price">$98.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/5.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >SWISS-DOT TUXEDO SHIRT</a>
-									<span class="tovar_price">$65.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/6.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >STRETCH PERFECT SHIRT</a>
-									<span class="tovar_price">$72.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/1.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >Moonglow paisley silk tee</a>
-									<span class="tovar_price">$98.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/2.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >PEASANT TOP IN SUCKERED STRIPE</a>
-									<span class="tovar_price">$78.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/3.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >EMBROIDERED BIB PEASANT TOP</a>
-									<span class="tovar_price">$88.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-						<li>
-							<!-- TOVAR -->
-							<div class="tovar_item_new">
-								<div class="tovar_img">
-									<img src="images/tovar/women/new/4.jpg" alt="" />
-									<div class="open-project-link">
-										<a class="open-project tovar_view" href="javascript:void(0);" data-url="%21projects/women/1.html" >quick view</a>
-									</div>
-								</div>
-								<div class="tovar_description clearfix">
-									<a class="tovar_title" href="product-page.html" >SILK POCKET BLOUSE</a>
-									<span class="tovar_price">$98.00</span>
-								</div>
-							</div><!-- //TOVAR -->
-						</li>
-					</ul>
+							</div>
+						{% endfor %}
+					</div>
 				</div>
-			</div><!-- //JCAROUSEL -->
-		</div><!-- //CONTAINER -->
-	</section>
+			</div>
+		</section>
+	{% endif %}
 {% endblock %}
 {% block javascripts %}
 	{{ parent() }}
