--- a/app/Resources/views/frontend/details.html.twig
+++ b/app/Resources/views/frontend/details.html.twig
@@ -120,7 +120,9 @@
 										</div>
 										<div class="tovar_description clearfix">
 											<a class="tovar_title" href="{{ path('frontend_produit_show', {'slug': produit.slug}) }}" >{{ produit.marque}} {{ produit.reference }}</a>
-											<span class="tovar_price">{{ produit.prix|number_format(0,'','.') }} FCFA</span>
+											{% if produit.prix %}
+												<span class="tovar_price">{{ produit.prix|number_format(0,'','.') }} FCFA</span>
+											{% endif %}
 										</div>
 									</div><!-- //TOVAR -->
 								</li>
@@ -142,7 +144,9 @@
 												<div class="col-md-6 product_content">
 													<h4>Reference: <span> {{ produit.reference }}</span></h4>
 													{{ produit.description|raw}}
-													<h3 class="cost"><span class="fa fa-money-bill"></span> {{ produit.prix|number_format(0,'','.')}} FCFA</h3>
+													{% if produit.prix %}
+														<h3 class="cost"><span class="fa fa-money-bill"></span> {{ produit.prix|number_format(0,'','.')}} FCFA</h3>
+													{% endif %}
 													<div class="space-ten"></div>
 													<div class="btn-ground">
 														<a href="{{ path('frontend_produit_show', {'slug': produit.slug}) }}" class="btn btn-primary"><span class="fa fa-list-alt"></span> Voir le produit</a>
