--- a/app/Resources/views/produit/show.html.twig
+++ b/app/Resources/views/produit/show.html.twig
@@ -58,6 +58,11 @@
                                         <a href="{{ path('backend_produit_edit', {'slug': produit.slug}) }}" class="m-r-5">
                                             <i class="fa fa-edit fa-lg"></i>
                                         </a>
+                                        <span class="pull-right">
+                                            <a href="{{ path('frontend_produit_show', {'slug': produit.slug}) }}" class="m-r-5" target="_blank">
+                                                <i class="fa fa-eye fa-lg"></i>
+                                            </a>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
