--- a/app/Resources/views/produitimage/new.html.twig
+++ b/app/Resources/views/produitimage/new.html.twig
@@ -93,7 +93,7 @@
                                     {{ form_errors(form.produit) }}
                                 </div>
                                 <div class="col-12 form-group">
-                                    <label for="">(Dimension image 1600x700 px)</label>
+                                    <label for="">(Dimension souhaitable 307x507 px)</label>
                                     {{ form_widget(form.imageFile)}}
                                     {{ form_errors(form.imageFile) }}
                                 </div>
